--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Open Science Map</title>
     
     
-    <script type="text/javascript" src='plugins/leaflet/leaflet.js'></script>
+    <script type="text/javascript" src='https://unpkg.com/leaflet@1.9.4/dist/leaflet.js'></script>
 
-    <link rel="stylesheet" href="plugins/leaflet/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 
     <script type="text/javascript" src='plugins/leaflet/Leaflet.markercluster-1.4.1/dist/leaflet.markercluster.js'></script>
     <link rel="stylesheet" href="plugins/leaflet/Leaflet.markercluster-1.4.1/dist/MarkerCluster.css">
@@ -22,7 +22,8 @@
     <script src="plugins/jquery-ui/external/jquery/jquery.js"></script>
     <script src="plugins/jquery-ui/jquery-ui.js"></script>
 
-    <script type="text/javascript" src="plugins/jquery/jquery-dateformat.min.js"></script>
+     <script src="plugins/moment.js"></script>
+
     <script type="text/javascript" src="plugins/jquery/jquery.datetimepicker.js"></script>
     <script type="text/javascript" src="plugins/jquery/jquery.datetimepicker.full.min.js"></script>
     <link rel="stylesheet" href="plugins/jquery/jquery.datetimepicker.css">
