added category coloring and minor adjustments

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="row">
         <div class="col d-flex justify-content-between">
              <span class="header_text">Open Science Map</span>
-            <div id="git_but" ><a class="btn btn-default" href="" target="git" data-toggle="tooltip" title="Go to Git Repo" data-original-title="Go to git Repo"><i class="bi bi-github"></i></a></div>
+            <div id="git_but" ><a class="btn btn-default" href="https://github.com/GeospatialCentroidCSU/open_science_map" target="git" data-toggle="tooltip" title="Go to Git Repo" data-original-title="Go to git Repo"><i class="bi bi-github"></i></a></div>
 
         </div>
     </div>
@@ -126,7 +126,7 @@
             </div>
     </div>
 
-  </div>
+  </div><div class="org_text">Developed by: <a href="https://gis.colostate.edu/">The Geospatial Centroid</a></div>
 </div>
 
 
