updated readme and date tweak

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 
                      <div id="filter_date" class="inline">
-                         <input  id="filter_date_checkbox" type="checkbox" value="">
+                         <input  id="filter_date_checkbox" type="checkbox" value="" title="Filter by Date">
                           <label class="form-check-label" for="filter_date_checkbox"></label>
                          <input id="filter_start_date" type="text" class="date_field"/>
                          <span id="filter_date_to"></span>
