updated title and made search case insensitive

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Open Science Map</title>
+    <title>Open Scholarship Map</title>
     
     
     <script type="text/javascript" src='https://unpkg.com/leaflet@1.9.4/dist/leaflet.js'></script>
@@ -61,7 +61,7 @@
 <div class="container">
     <div class="row">
         <div class="col d-flex justify-content-between">
-             <span class="header_text">Open Science Map</span>
+             <span class="header_text">Open Scholarship Map (Beta)</span>
             <div id="git_but" ><a class="btn btn-default" href="https://github.com/GeospatialCentroid/open_science_map" target="git" data-toggle="tooltip" title="Go to Git Repo" data-original-title="Go to git Repo"><i class="bi bi-github"></i></a></div>
 
         </div>
