--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <div class="container">
     <div class="row">
         <div class="col d-flex justify-content-between">
-             <span class="header_text">Open Scholarship Map (Beta)</span>
+             <span class="header_text">Open Scholarship Map (beta)</span>
             <div id="git_but" ><a class="btn btn-default" href="https://github.com/GeospatialCentroid/open_science_map" target="git" data-toggle="tooltip" title="Go to Git Repo" data-original-title="Go to git Repo"><i class="bi bi-github"></i></a></div>
 
         </div>
