--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
     </div>
 
-  </div><div class="org_text">Developed by: <a href="https://gis.colostate.edu/">The Geospatial Centroid</a></div>
+  </div><div class="org_text">Developed by: <a href="https://gis.colostate.edu/" target="_blank">The Geospatial Centroid</a></div>
 </div>
 
 
