--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
     </div>
   <div class="row mt-3">
-    <div class="col-4">
+    <div class="col" style="max-width:550px;">
       <div id="search_panel_wrapper" class="tab_panel">
                 <div id="side_header">
 
@@ -118,7 +118,7 @@
     </div>
     <div class="col">
        <div id="results">
-
+        <label class="form-label" >Results</label>
                 <div >
                     <div id="results_view"></div>
 
