label shift to be outside results scroll

--- a/index.html
+++ b/index.html
@@ -41,29 +41,24 @@
     <script src="plugins/rison.js"></script>
 
     <script src="js/index.js"></script>
-     <script src="js/utils.js"></script>
-     <script src="js/filter.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/filter.js"></script>
     <script src="js/layer_manager.js"></script>
-     <script src="js/map_manager.js"></script>
+    <script src="js/map_manager.js"></script>
     <link rel="stylesheet" href="css/style.css" />
-
-
-
 <body>
-<div class="overlay ">
+<div class="overlay">
     <div class="progress">
           <div id="loader" class="progress-bar progress-bar-success progress-bar-striped active align-middle bg-info" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
             <span id="current-progress"></span>
           </div>
-         </div>
+    </div>
 </div>
-
 <div class="container">
     <div class="row">
         <div class="col d-flex justify-content-between">
              <span class="header_text">Open Scholarship Map (beta)</span>
             <div id="git_but" ><a class="btn btn-default" href="https://github.com/GeospatialCentroid/open_science_map" target="git" data-toggle="tooltip" title="Go to Git Repo" data-original-title="Go to git Repo"><i class="bi bi-github"></i></a></div>
-
         </div>
     </div>
     <div class="row">
@@ -108,29 +103,19 @@
                         </div>
                     </div>
                 </div>
-
-
-
-
-
            </div>
-
     </div>
     <div class="col">
-       <div id="results">
         <label class="form-label" >Results</label>
+       <div id="results">
                 <div >
                     <div id="results_view"></div>
 
                 </div>
             </div>
     </div>
-
-  </div><div class="org_text">Developed by: <a href="https://gis.colostate.edu/" target="_blank">The Geospatial Centroid</a></div>
+  </div>
+  <div class="org_text">Developed by: <a href="https://gis.colostate.edu/" target="_blank">The Geospatial Centroid</a></div>
 </div>
-
-
-
-
 </body>
 </html>
